# libvtermcpp

./: .gitignore  CMakeLists.txt  LICENSE  MODERNISATION_PROMPT.md  README.md  sources.cmake
include/vterm/: callbacks.h  screen.h  scrollback.h  state.h  terminal.h  types.h  vterm.h
src/: encoding.cpp  fullwidth.inc  internal.h  keyboard.cpp  mouse.cpp  parser.cpp  pen.cpp  screen.cpp  scrollback.cpp  scrollback_impl.h  state.cpp  terminal.cpp  unicode.cpp  utf8.h
test/: CMakeLists.txt  harness.h  main.cpp  test.h  test_02_parser.cpp  test_03_encoding_utf8.cpp  test_10_state_putglyph.cpp  test_11_state_movecursor.cpp  test_12_state_scroll.cpp  test_13_state_edit.cpp  test_14_state_encoding.cpp  test_15_state_mode.cpp  test_16_state_resize.cpp  test_17_state_mouse.cpp  test_18_state_termprops.cpp  test_20_state_wrapping.cpp  test_21_state_tabstops.cpp  test_22_state_save.cpp  test_25_state_input.cpp  test_26_state_query.cpp  test_27_state_reset.cpp  test_28_state_dbl_wh.cpp  test_29_state_fallback.cpp  test_30_state_pen.cpp  test_31_state_rep.cpp  test_32_state_flow.cpp  test_40_state_selection.cpp  test_60_screen_ascii.cpp  test_61_screen_unicode.cpp  test_62_screen_damage.cpp  test_63_screen_resize.cpp  test_64_screen_pen.cpp  test_65_screen_protect.cpp  test_66_screen_extent.cpp  test_67_screen_dbl_wh.cpp  test_68_screen_termprops.cpp  test_69_screen_pushline.cpp  test_69_screen_reflow.cpp  test_90_vttest_01_movement_1.cpp  test_90_vttest_01_movement_2.cpp  (+58 more)
test/golden/: scrollback_stress_interleaved_0.txt  scrollback_stress_interleaved_1.txt  scrollback_stress_interleaved_2.txt  scrollback_stress_interleaved_3.txt  scrollback_stress_interleaved_4.txt  scrollback_stress_interleaved_5.txt  scrollback_stress_interleaved_6.txt  scrollback_stress_interleaved_7.txt  scrollback_stress_interleaved_8.txt  scrollback_stress_interleaved_9.txt  scrollback_stress_large_output_0.txt  scrollback_stress_large_output_1.txt  scrollback_stress_large_output_2.txt  scrollback_stress_large_output_3.txt  scrollback_stress_large_output_4.txt  scrollback_stress_rapid_resize_0.txt  scrollback_stress_rapid_resize_1.txt  scrollback_stress_rapid_resize_10.txt  scrollback_stress_rapid_resize_11.txt  scrollback_stress_rapid_resize_12.txt  scrollback_stress_rapid_resize_13.txt  scrollback_stress_rapid_resize_14.txt  scrollback_stress_rapid_resize_15.txt  scrollback_stress_rapid_resize_16.txt  scrollback_stress_rapid_resize_18.txt  scrollback_stress_rapid_resize_19.txt  scrollback_stress_rapid_resize_2.txt  scrollback_stress_rapid_resize_3.txt  scrollback_stress_rapid_resize_4.txt  scrollback_stress_rapid_resize_5.txt  scrollback_stress_rapid_resize_6.txt  scrollback_stress_rapid_resize_7.txt  scrollback_stress_rapid_resize_8.txt  scrollback_stress_rapid_resize_9.txt  scrollback_stress_wide_chars_1.txt  scrollback_stress_wide_chars_2.txt  scrollback_stress_wide_chars_3.txt  scrollback_stress_wide_chars_4.txt  scrollback_stress_wide_chars_5.txt  scrollback_stress_wide_chars_6.txt
