add_executable(libvtermcpp-test
    main.cpp
    test_02_parser.cpp
    test_03_encoding_utf8.cpp
    test_10_state_putglyph.cpp
    test_11_state_movecursor.cpp
    test_12_state_scroll.cpp
    test_13_state_edit.cpp
    test_14_state_encoding.cpp
    test_15_state_mode.cpp
    test_16_state_resize.cpp
    test_17_state_mouse.cpp
    test_18_state_termprops.cpp
    test_20_state_wrapping.cpp
    test_21_state_tabstops.cpp
    test_22_state_save.cpp
    test_25_state_input.cpp
    test_26_state_query.cpp
    test_27_state_reset.cpp
    test_28_state_dbl_wh.cpp
    test_29_state_fallback.cpp
    test_30_state_pen.cpp
    test_31_state_rep.cpp
    test_32_state_flow.cpp
    test_40_state_selection.cpp
    test_60_screen_ascii.cpp
    test_61_screen_unicode.cpp
    test_62_screen_damage.cpp
    test_63_screen_resize.cpp
    test_64_screen_pen.cpp
    test_65_screen_protect.cpp
    test_66_screen_extent.cpp
    test_67_screen_dbl_wh.cpp
    test_68_screen_termprops.cpp
    test_69_screen_pushline.cpp
    test_69_screen_reflow.cpp
    test_90_vttest_01_movement_1.cpp
    test_90_vttest_01_movement_2.cpp
    test_90_vttest_01_movement_3.cpp
    test_90_vttest_01_movement_4.cpp
    test_90_vttest_02_screen_1.cpp
    test_90_vttest_02_screen_2.cpp
    test_90_vttest_02_screen_3.cpp
    test_90_vttest_02_screen_4.cpp
    test_92_regression.cpp
    test_seq_c1_8bit.cpp
    test_seq_cha_hpa.cpp
    test_seq_cht_cbt.cpp
    test_seq_chunked_input.cpp
    test_seq_cnl_cpl.cpp
    test_seq_control_chars.cpp
    test_seq_cuf_cub.cpp
    test_seq_cup_hvp.cpp
    test_seq_cuu_cud.cpp
    test_seq_da.cpp
    test_seq_decaln.cpp
    test_seq_decawm.cpp
    test_seq_decdhl_decdwl.cpp
    test_seq_decic_decdc.cpp
    test_seq_deckpam_deckpnm.cpp
    test_seq_declrmm.cpp
    test_seq_decom.cpp
    test_seq_decrqm.cpp
    test_seq_decrqss.cpp
    test_seq_decsc_decrc.cpp
    test_seq_decsca.cpp
    test_seq_decscusr.cpp
    test_seq_decset_altscreen.cpp
    test_seq_decset_cursor.cpp
    test_seq_decset_mouse.cpp
    test_seq_decslrm.cpp
    test_seq_decstbm.cpp
    test_seq_decstr_ris.cpp
    test_seq_dsr.cpp
    test_seq_ech.cpp
    test_seq_ed.cpp
    test_seq_el.cpp
    test_seq_hpr_hpb.cpp
    test_seq_ich_dch.cpp
    test_seq_il_dl.cpp
    test_seq_locking_shifts.cpp
    test_seq_osc.cpp
    test_seq_rep.cpp
    test_seq_s7c1t_s8c1t.cpp
    test_seq_scrollback_reflow.cpp
    test_seq_scs.cpp
    test_seq_sgr_basic.cpp
    test_seq_sgr_color.cpp
    test_seq_sgr_compound.cpp
    test_seq_sm_rm.cpp
    test_seq_su_sd.cpp
    test_seq_tbc.cpp
    test_seq_vpa_vpr_vpb.cpp
    test_seq_xtversion.cpp
    test_scrollback.cpp
)

target_link_libraries(libvtermcpp-test PRIVATE vtermcpp)

target_include_directories(libvtermcpp-test PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/../include
    ${CMAKE_CURRENT_SOURCE_DIR}/../src
)

target_compile_definitions(libvtermcpp-test PRIVATE
    TEST_GOLDEN_DIR="${CMAKE_CURRENT_SOURCE_DIR}/golden"
)
